--- a/.github/workflows/wakatime-stats.yml
+++ b/.github/workflows/wakatime-stats.yml
@@ -14,3 +14,7 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SHOW_COMMIT: "True"
+          SHOW_OS: "True"
+          SHOW_PROJECTS: "False"
+          SHOW_DAYS_OF_WEEK: "True" 
